Begin Skylight theme

--- a/scss/theme/chat/_container.scss
+++ b/scss/theme/chat/_container.scss
@@ -2,4 +2,7 @@
     .wrapper-2vIMkT {
         background-color: var(--background-tertiary);
     }
+    .chatContent-3KubbW {
+        background: var(--sky-bg);
+    }
 }
