--- a/scss/theme/pages/_discovery.scss
+++ b/scss/theme/pages/_discovery.scss
@@ -1,6 +1,6 @@
 #app-mount .content-1SgpWY {
     .pageWrapper-2PwDoS {
-        background-color: var(--background-primary);
+        background: var(--sky-bg);
     }
     .searchBox-pyIJJj {
         background-color: var(--input-background);
