--- a/scss/theme/pages/_server-guide.scss
+++ b/scss/theme/pages/_server-guide.scss
@@ -1,4 +1,7 @@
 #app-mount {
+    .background-12kWdX {
+        background: var(--sky-bg);
+    }
     .row--LCpto {
         background-color: var(--background-tertiary);
         &:hover {
