--- a/scss/theme/settings/_content.scss
+++ b/scss/theme/settings/_content.scss
@@ -2,4 +2,7 @@
     .default-1Tkeeg {
         background-color: var(--background-primary);
     }
+    .contentRegionScroller-2_GT_N {
+        background: var(--sky-bg);
+    }
 }
