--- a/scss/core/__variable.scss
+++ b/scss/core/__variable.scss
@@ -1,8 +1,9 @@
 :root {
+    --HSL-server-alignment: center;
+
     --sky-bg-image: url("https://wallpapercave.com/wp/wp2394190.jpg");
     --sky-bg: var(--sky-bg-image) center/cover;
 
-    /* ignore these, unless you wanna mess with them, then go for it. they may be removed at any time, though. */
     --lightness-600-660: 0%;
     --lightness-700-760: 0%;
     --lightness-800-860: 0%;
