--- a/scss/theme/chat/_messages.scss
+++ b/scss/theme/chat/_messages.scss
@@ -1,7 +1,12 @@
 #app-mount {
     // Message Items
-    .messageListItem-ZZ7v6g:hover {
-        background-color: rgba(255, 255, 255, 0.015);
+    .messageListItem-ZZ7v6g {
+        margin: 0 5px 0 10px;
+        border-radius: 10px;
+
+        &:hover {
+            background-color: rgba(76, 219, 255, 0.281);
+        }
     }
     // Gifts
     .tile-2mmK5T {
@@ -10,4 +15,10 @@
             background-color: var(--background-secondary-alt);
         }
     }
+}
+
+.message-2CShn3.selected-2LX7Jy,
+.mouse-mode.full-motion .message-2CShn3:hover {
+    border-radius: 10px;
+    background-color: rgba(76, 219, 255, 0.281);
 }
